# YouUp

./: .env.default  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: release.yml  run_tests.yml
migrations/2020-04-06-233436_create_links/: down.sql  up.sql
migrations/2020-06-08-224058_add_project_description/: down.sql  up.sql
migrations/2020-08-07-081610_add_incidents_table/: up.sql
migrations/2020-08-09-001034_add_incident_status_type/: down.sql  up.sql
migrations/2020-08-09-001215_add_incident_status_update/: down.sql  up.sql
migrations/2020-08-09-010207_remove_status_and_message_from_incidents/: down.sql  up.sql
migrations/2020-08-10-172559_add_settings_table/: down.sql  up.sql
migrations/2020-08-10-232746_add_project_enabled_flag/: down.sql  up.sql
migrations/2020-08-12-185816_add_email_subscriptions/: down.sql  up.sql
migrations/2021-03-25-190446_add_sms_subscriptions/: down.sql  up.sql
migrations/2021-03-26-000728_add_webhook_subscription/: down.sql  up.sql
src/: db.rs  form_email_subscribe.rs  mailer.rs  main.rs  models.rs  project_status.rs  schema.rs  settings.rs  template_admin_dashboard.rs  template_admin_incident.rs  template_admin_incident_new.rs  template_admin_login.rs  template_admin_subscriptions.rs  template_incident_details.rs  template_index.rs  template_tooltip.rs  time_formatter.rs  time_utils.rs  update_job.rs
src/data/: incident_repository.rs  mod.rs  project_repository.rs  sms_subscription_repository.rs  status_repository.rs  webhook_subscription_repository.rs
src/notifications/: mailer.rs  mod.rs  sms.rs  webhook.rs
src/template/: mod.rs  template_admin_dashboard.rs  template_admin_incident.rs  template_admin_incident_new.rs  template_admin_incident_status_new.rs  template_admin_login.rs  template_admin_project_details.rs  template_admin_project_new.rs  template_admin_subscriptions.rs  template_embed.rs  template_feed_atom.rs  template_feed_rss.rs  template_history.rs  template_incident_details.rs  template_tooltip.rs  template_uptime.rs
src/template/index/: downtime.rs  mod.rs  status_day.rs  template_index.rs
src/utils/: mod.rs
templates/: admin_dashboard.html  admin_incident_status_new.html  admin_incidents.html  admin_incidents_new.html  admin_login.html  admin_project_details.html  admin_subscriptions.html  base_admin_template.html  base_template.html  email_confirm_subscription.html  embed.html  incident_details.html  incidents.html  index.html  status_tooltip.html  uptime.html
