[package]
name = "you_up"
version = "0.3.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "=2.10.0"
actix-web = "=4.11.0"
actix-files = "=0.6.7"
actix-identity = "=0.8.0"
actix-session = { version = "=0.10.1", features = ["cookie-session"] }
http = "=1.3.1"
rand = "=0.9.2"
serde = { version = "=1.0.219", features = ["derive"] }
askama = "=0.14.0"
chrono = "=0.4.41"
diesel = { version = "=2.2.12", features = ["r2d2", "mysql", "chrono"] }
diesel_migrations = "=2.2.0"
dotenv = "=0.15.0"
reqwest = { version = "=0.12.22", features = ["gzip", "json"]}
lettre = { version = "=0.11.17", features = ["smtp-transport"] }
lazy_static = "=1.5.0"
tracing = "=0.1.41"
tracing-futures = "=0.2.5"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
sentry-tracing = "=0.41.0"
sentry = "=0.41.0"
uuid = { version = "=1.17.0", features = ["v4"] }
rss = { version = "=2.0.12", features = ["builders"] }
escaper = "=0.1.1"
atom_syndication = { version = "=0.12.7", features = ["builders"] }
twilio = "=1.1.0"
anyhow = "=1.0.98"

[profile.release]
debug = true