[package]
name = "you_up"
version = "0.3.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "=2.11.0"
actix-web = "=4.12.1"
actix-files = "=0.6.9"
actix-identity = "=0.9.0"
actix-session = { version = "=0.11.0", features = ["cookie-session"] }
http = "=1.4.0"
rand = "=0.9.2"
serde = { version = "=1.0.228", features = ["derive"] }
askama = "=0.15.1"
chrono = "=0.4.42"
diesel = { version = "=2.3.5", features = ["r2d2", "mysql", "chrono"] }
diesel_migrations = "=2.3.1"
dotenv = "=0.15.0"
reqwest = { version = "=0.13.1", features = ["gzip", "json"]}
lettre = { version = "=0.11.19", features = ["smtp-transport"] }
lazy_static = "=1.5.0"
tracing = "=0.1.44"
tracing-futures = "=0.2.5"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
sentry-tracing = "=0.46.1"
sentry = "=0.46.1"
uuid = { version = "=1.19.0", features = ["v4"] }
rss = { version = "=2.0.12", features = ["builders"] }
escaper = "=0.1.1"
atom_syndication = { version = "=0.12.7", features = ["builders"] }
twilio = "=1.1.0"
anyhow = "=1.0.100"

[profile.release]
debug = true